adds hero search capability to dashboard

--- a/ToH.org
+++ b/ToH.org
@@ -62,5 +62,7 @@ CLOSED: [2016-10-02 Sun 23:11]
     CLOSED: [2016-10-14 Fri 10:28]
 **** Where does the hero id come from?
 ***** We used POST! it comes from HTTP POST spec I guess
-*** TODO Remove
-** TODO Hero Search feature
+*** DONE Remove
+    CLOSED: [2016-10-14 Fri 10:55]
+** DONE Hero Search feature
+   CLOSED: [2016-10-14 Fri 14:20]
